need school update

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,7 +35,7 @@ li > * {
 }
 
 h1 {
-  background-color: teal;
+  background-color: rgb(110, 110, 22);
   padding: 1rem;
   color: linen;
   text-align: center;
